--- a/style.css
+++ b/style.css
@@ -254,8 +254,9 @@ display: flex;
 }
 .images{
   position: relative;
-  background: blue;
+  /* background: blue; */
   margin-top: 20vw;
+  padding: 100px;
 }
 .img1{
     position: absolute;
@@ -266,17 +267,20 @@ display: flex;
 .img2{
     position: absolute;
     /* right: -90px; */
-    right: -6vw;
+    right: -6.5vw;
     z-index: 100;
-    bottom: 0;
+    bottom: 13vw;
 }
 .img3{
     position: absolute;
      z-index: 100;
     height: 40vw;
-    bottom: -200px;
+    bottom: -50px;
 }
 .img4{
+    /* change this file  */
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     z-index: 90;
