--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ display: flex;
 .img2{
     position: absolute;
     /* right: -90px; */
-    right: -6.5vw;
+    right: -100px;
     z-index: 100;
     top: -433px;
 }
