--- a/style.css
+++ b/style.css
@@ -261,13 +261,13 @@ display: flex;
 .img1{
     position: absolute;
     z-index: 110;
-    right: 150px;
+    right: 250px;
     top: -400px;
 }
 .img2{
     position: absolute;
     /* right: -90px; */
-    right: -100px;
+    right: 0px;
     z-index: 100;
     top: -433px;
 }
@@ -275,6 +275,7 @@ display: flex;
     position: absolute;
      z-index: 100;
     height: 40vw;
+    left: 0;
     bottom: -50px;
 }
 .img4{
@@ -283,6 +284,7 @@ display: flex;
     height: 100%;
     position: absolute;
     top: 0;
+    right: 0%;
     z-index: 90;
 }
 /* End section-five  */
