--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ display: flex;
 .img2{
     position: absolute;
     /* right: -90px; */
-    right: 0px;
+    right: 0;
     z-index: 100;
     top: -433px;
 }
@@ -284,7 +284,7 @@ display: flex;
     height: 100%;
     position: absolute;
     top: 0;
-    right: 0%;
+    right: 0;
     z-index: 90;
 }
 /* End section-five  */
